Added settings to build.